2010-01-31  Franz Holzinger  <franz@ttproducts.de>
	* fix bug in getTitleFromIsoCode: SQL error due to wrong starting AND in where statement
	* remove static_markets: New extension static_info_tables_markets
	* fix bug 10037: add Albacete to Spain
	* fix bug 10038: use TYPO3 internal language code if this exists instead of ISO code
	* fix bug 12854: getCurrentLanguage doesn't use FE language
	* fix bug 12145: static_info_tables, syntax errors in "ext_tables_static+adt.sql"
	* fix bug 0011739: Wrong abbreviations for german federal states
	* add Italian provinces
	* make Stanlislas Rolland <stanislas.rolland@sjbr.ca> the new maintainer of static_info_tables

2009-06-20  Franz Holzinger  <franz@ttproducts.de>
	* Fix bug 2397: loadTcaAdditions
	* Add the field 'deleted' to static_countries because some countries like 'Serbia and Montenegro' have been divided.
	* This makes it possible to keep lost countries for historical reasons.
	* Add the new countries Serbia and Montenegro
	* Add Dutch country zones
	* fix the telephone precall number for some countries
	* make Romania and Bulgaria to EU countries

2008-11-03  Franz Holzinger  <contact@fholzinger.com>
	* Fix bug 9351: Tennessee
	* fix getTitleFromIsoCode: empty where clause must be '1=1' to allow AND combinations
	* support for page module
	* fix bug 7930: return the resulting selected array in the methods buildStaticInfoSelector and optionsConstructor

2008-07-15  Franz Holzinger  <contact@fholzinger.com>
	* Add the form tags to the UPDATE! function in EM for TYPO3 4.2.1
	* The versions 2.0.x are the last ones which will work under PHP 4.
	* Fix bug with PHP4: http://www.jambage.com/index.php?id=215&tt_board_uid=1621
	  Remove the parameter $outSelectedArray again for PHP4. This will be back again in version 2.1.0.

2008-06-07  Franz Holzinger  <contact@fholzinger.com>
	* fix bug 7930: return the resulting selected array in the methods buildStaticInfoSelector and optionsConstructor